--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,37 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container-fluid">
+      <div
+        class="row d-flex justify-content-center
+     m-5 cardplayer"
+        style="min-width: 50%;"
+      >
+        <div class="col-4"></div>
+        <div class="col-4 card" style="border-radius: 20px;">
+          <div
+            class="card-header d-flex justify-content-start pb-2"
+            id="cardsymbol"
+            style="background-color: white; border: none; font-size: 100px; overflow: auto;"
+          >
+            <div class="topcardsymbol"></div>
+          </div>
+          <div
+            class="d-flex justify-content-center pt-2 pb-2"
+            id="myNumber"
+            style="font-size: 200px; overflow: auto;"
+          >
+            <p></p>
+          </div>
+          <div
+            class="card-footer d-flex justify-content-start pt-3"
+            style="background-color: white; border: none; font-size: 100px; transform: rotate(-180deg); overflow: auto;"
+          >
+            <div class="bottomcardsymbol "></div>
+          </div>
+        </div>
+
+        <div class="col-4"></div>
       </div>
     </div>
   </body>
