--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,13 @@
             <div class="bottomcardsymbol "></div>
           </div>
         </div>
-
         <div class="col-4"></div>
       </div>
+    </div>
+    <div class=" d-flex justify-content-center">
+      <button class="btn btn-light" onClick="window.location.reload();">
+        Get a new Card
+      </button>
     </div>
   </body>
 </html>
